# poc-rag

./: .dockerignore  .editorconfig  .flake8  .gitattributes  .gitignore  .pre-commit-config.yaml  .readthedocs.yaml  CHANGELOG.md  CONTRIBUTING.md  DEPLOYMENT.md  LICENSE  LOCAL_TEST_RESULTS.md  MANIFEST.in  Makefile  Procfile  README.md  README_BUSINESS.md  README_HF_DEPLOYMENT.md  SECURITY.md  codecov.yml  deploy-cloudrun.sh  mypy.ini  pyproject.toml  pytest.ini  render.yaml  requirements-dev.txt  requirements.txt  setup.py  test_rag_pipeline.py  tox.ini
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md  question.md
.github/workflows/: ci.yml  release.yml  sync-to-bitbucket.yml
.obsidian/: workspace.json
.streamlit/: config.toml
docs/: README.md  architecture.md  case_study.md  case_study_structure.md  demo.webm  directory_tree.md  implement.md  project_structure.md  project_summary.md  run.md  test_results.md
docs/input_docs/: EU_GDPR_Data_Protection_Regulation.md  India_National_Health_Policy_2017.md  WHO_Digital_Health_Strategy_2020_2025.md  australia_international_development_policy_2023.md  un_2030_sustainable_development.md
docs/source/: architecture.rst  conf.py  index.rst  installation.rst  quickstart.rst
ingestion/: README.md  chunker.py  cli_ingest.py  embeddings.py  load_docs.py  save_embeddings.py  search_local.py  test_ingestion.py
ingestion/data/: embeddings.jsonl
retrieval/: retriever.py  test_retrieval.py
scripts/: README.md  check_index_metadata.py  check_pinecone.py  ingest_documents.py  regenerate_with_semantic.py  search_documents.py  test_ingestion.py
src/: __init__.py  check_index_meta.py  check_pinecone.py  config.py  llm_providers.py  orchestrator.py  run_ingestion.py
src/ingestion/: README.md  chunker.py  cli_ingest.py  embeddings.py  load_docs.py  save_embeddings.py  search_local.py
src/retrieval/: retriever.py
src/scripts/: regenerate_with_semantic.py
supabase/: config.toml
tests/: test_retrieval.py
ui/: app.py
(+4 files in other folders)
